--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" ng-app="xtor">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>xtor - Password Manager in JS</title>
 
     <link rel="stylesheet" href="bower_components/bulma/css/bulma.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="custom.css">
 
     <script src="X.js"></script>
     <script src="elm.js"></script>
