--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
         app.ports.encrypt.subscribe(function(arr) {
             var master = arr[0];
             var input = arr[1];
-            var obj = X.encrypt(master, input);
-            console.log('ports:encrypt', master, input, obj);
-            app.ports.encrypted.send(obj);
+            try {
+                var obj = X.encrypt(master, input);
+                //console.log('ports:encrypt', master, input, obj);
+                app.ports.encrypted.send(obj);
+            } catch (e) {
+                console.log(e);
+            }
         });
 
         app.ports.decrypt.subscribe(function(arr) {
             var master = arr[0];
             var obj = arr[1];
-            var text = X.decrypt(master, obj);
-            console.log('ports:decrypt', master, obj, text);
-            app.ports.decrypted.send(text);
+            try {
+                var text = X.decrypt(master, obj);
+                //console.log('ports:decrypt', master, obj, text);
+                app.ports.decrypted.send(text);
+            } catch (e) {
+                console.log(e);
+                app.ports.decrypted.send(e.toString());
+            }
         });
     </script>
 </body>
